--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
+
 # Compiled class file
 *.class
 
@@ -9,6 +16,17 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+out/
+!**/src/main/**/out/
+!**/src/test/**/out/
+
 
 # Package Files #
 *.jar
